--- a/Organ.AI/Base.lproj/Main.storyboard
+++ b/Organ.AI/Base.lproj/Main.storyboard
@@ -200,7 +200,7 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWf-uH-4VC">
-                                                    <rect key="frame" x="104" y="0.0" width="310" height="44"/>
+                                                    <rect key="frame" x="114" y="0.0" width="300" height="44"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -209,7 +209,7 @@
                                             <constraints>
                                                 <constraint firstItem="OgG-1z-3H4" firstAttribute="top" secondItem="lqy-Ao-fUs" secondAttribute="top" id="1il-4Y-KEQ"/>
                                                 <constraint firstAttribute="bottom" secondItem="OgG-1z-3H4" secondAttribute="bottom" id="22e-R5-kj3"/>
-                                                <constraint firstItem="uWf-uH-4VC" firstAttribute="leading" secondItem="OgG-1z-3H4" secondAttribute="trailing" id="3nM-wK-jdw"/>
+                                                <constraint firstItem="uWf-uH-4VC" firstAttribute="leading" secondItem="OgG-1z-3H4" secondAttribute="trailing" constant="10" id="3nM-wK-jdw"/>
                                                 <constraint firstItem="uWf-uH-4VC" firstAttribute="top" secondItem="lqy-Ao-fUs" secondAttribute="top" id="611-lL-052"/>
                                                 <constraint firstAttribute="bottom" secondItem="tTw-9j-jo4" secondAttribute="bottom" id="7Kq-5I-GX7"/>
                                                 <constraint firstItem="tTw-9j-jo4" firstAttribute="leading" secondItem="lqy-Ao-fUs" secondAttribute="leading" id="CHU-PF-UTr"/>
