Integrate MessengerKit to master

--- a/Organ.AI/Base.lproj/Main.storyboard
+++ b/Organ.AI/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l1i-wd-kYJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="l1i-wd-kYJ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -455,6 +455,7 @@
                         <outlet property="weekMonthToggleOutlet" destination="Hdr-ZQ-iRT" id="spP-97-Xdq"/>
                         <segue destination="qUp-Z2-zx6" kind="show" identifier="segue" id="c55-HR-rh1"/>
                         <segue destination="3qo-Dw-Adn" kind="show" identifier="addEventWithAISegue" id="550-zi-ewb"/>
+                        <segue destination="Hdh-b1-ibt" kind="show" identifier="MessengeKitSegue" id="flj-6d-Zos"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zCI-Pv-WNQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -482,6 +483,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1uq-ms-TSf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2542" y="136"/>
+        </scene>
+        <!--Autocomplete Example View Controller-->
+        <scene sceneID="IaI-U0-Phy">
+            <objects>
+                <viewController id="Hdh-b1-ibt" customClass="AutocompleteExampleViewController" customModule="Organ_AI" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ozO-YL-adO">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="VWp-om-WFX"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="yNf-bl-Oc5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QCw-Gs-kiZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4571" y="990"/>
         </scene>
         <!--Message View Controller-->
         <scene sceneID="4Mh-FV-5xe">
